[project]
name = "query-sense"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain>=0.3.27",
    "langgraph>=0.6.6",
    "litellm>=1.75.9",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "pymysql>=1.1.0",
    "cx-oracle>=8.3.0",
    "pyodbc>=5.0.0",
]
